--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="stage">
+    <div id="stage" class="spotlight-container">
         <div class="spotlight" id="spotlight1"></div>
         <div class="spotlight" id="spotlight2"></div>
         <div class="spotlight" id="spotlight3"></div>
