--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
         <div class="spotlight" id="spotlight7"></div>
         <div class="spotlight" id="spotlight8"></div>
     </div>
+    <div class="rectangle">
+        <div class="light" id="light1"></div>
+        <div class="light" id="light2"></div>
+        <div class="light" id="light3"></div>
+        <div class="light" id="light4"></div>
+        <div class="light" id="light5"></div>
+        <div class="light" id="light6"></div>
+        <div class="light" id="light7"></div>
+        <div class="light" id="light8"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
