--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotlight Visualizer</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .rectangle {
+            width: 100%;
+            height: 500px;
+            background-color: brown;
+            position: relative;
+        }
+    </style>
 </head>
 <body>
     <div class="rectangle">
