--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
             height: 500px;
             background-color: brown;
             position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .light {
+            margin: 5px;
         }
     </style>
 </head>
