making light layout

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
         }
         .light {
             margin: 5px;
+            background-color: white;
+        }
+        #light4, #light5 {
+            position: absolute;
+        }
+        #light4 {
+            left: 45%;
+        }
+        #light5 {
+            left: 50%;
         }
     </style>
 </head>
