--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Spotlight Visualizer</title>
     <link rel="stylesheet" href="styles.css">
     <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
         .rectangle {
             width: 100%;
             height: 500px;
