--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         .rectangle {
             width: 100%;
             height: 500px;
-            background-color: brown;
+            background-color: rgb(47, 3, 3);
             position: relative;
             display: flex;
             justify-content: center;
