--- a/index.html
+++ b/index.html
@@ -3,51 +3,143 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotlight Visualizer</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Stage Lighting Planner</title>
     <style>
-        html, body {
-            height: 100%;
+        body {
             margin: 0;
+            min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
+            background: #333;
+            font-family: Arial, sans-serif;
         }
-        .rectangle {
-            width: 100%;
-            height: 500px;
-            background-color: rgb(47, 3, 3);
+
+        .stage-container {
             position: relative;
+            width: 1200px;
+            height: 600px;
+        }
+
+        /* Stage Floor */
+        .stage-floor {
+            position: absolute;
+            bottom: 50px;
+            width: 100%;
+            height: 400px;
+            background: linear-gradient(to bottom right, #8b4513, #6b2d0f);
+            box-shadow: 0 20px 30px rgba(0,0,0,0.3);
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
+
+        /* Spotlight Locations */
+        .spotlight-location {
+            width: 80px; /* Larger radius */
+            height: 80px;
+            background: rgba(255, 255, 255, 0.3); /* White and transparent */
+            border: 2px solid rgba(255, 255, 255, 0.8); /* White border */
+            border-radius: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
+            color: white;
+            font-weight: bold;
+            font-size: 1.2em;
+            text-shadow: 1px 1px 2px #000;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            position: relative;
         }
-        .light {
-            margin: 5px;
-            background-color: white;
+
+        .spotlight-location:hover {
+            background: rgba(255, 255, 255, 0.5); /* More opaque on hover */
+            transform: scale(1.1);
         }
-        #light4, #light5 {
+
+        /* Overlap for spotlights 4 and 5 */
+        #spotlight-4 {
+            left: -20px; /* Shift left to overlap */
+        }
+
+        #spotlight-5 {
+            left: 20px; /* Shift right to overlap */
+        }
+
+        /* Stage Labels */
+        .stage-label {
             position: absolute;
+            color: white;
+            font-size: 1.5em;
+            font-weight: bold;
+            text-shadow: 1px 1px 2px #000;
         }
-        #light4 {
-            left: 45%;
+
+        #stage-left {
+            left: 20px;
+            bottom: 50%;
+            transform: translateY(50%);
         }
-        #light5 {
-            left: 50%;
+
+        #stage-right {
+            right: 20px;
+            bottom: 50%;
+            transform: translateY(50%);
         }
+
+        /* Glass Wall */
+        .glass-wall {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 200px;
+            background: linear-gradient(45deg, 
+                rgba(255,255,255,0.1) 0%,
+                rgba(255,255,255,0.3) 50%,
+                rgba(255,255,255,0.1) 100%);
+            backdrop-filter: blur(5px);
+            border-bottom: 2px solid rgba(255,255,255,0.2);
+        }
+
+        /* Textured Wall */
+        .textured-wall {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 50px;
+            background: repeating-linear-gradient(
+                45deg,
+                #444,
+                #444 10px,
+                #555 10px,
+                #555 20px
+            );
+        }
+
     </style>
 </head>
 <body>
-    <div class="rectangle">
-        <div class="light" id="light1"></div>
-        <div class="light" id="light2"></div>
-        <div class="light" id="light3"></div>
-        <div class="light" id="light4"></div>
-        <div class="light" id="light5"></div>
-        <div class="light" id="light6"></div>
-        <div class="light" id="light7"></div>
-        <div class="light" id="light8"></div>
+    <div class="stage-container">
+        <div class="glass-wall"></div>
+        <div class="stage-floor">
+            <!-- Spotlight Locations -->
+            <div class="spotlight-location" id="spotlight-1">1</div>
+            <div class="spotlight-location" id="spotlight-2">2</div>
+            <div class="spotlight-location" id="spotlight-3">3</div>
+            <div class="spotlight-location" id="spotlight-4">4</div>
+            <div class="spotlight-location" id="spotlight-5">5</div>
+            <div class="spotlight-location" id="spotlight-6">6</div>
+            <div class="spotlight-location" id="spotlight-7">7</div>
+            <div class="spotlight-location" id="spotlight-8">8</div>
+        </div>
+
+        <!-- Stage Labels -->
+        <div class="stage-label" id="stage-left">Stage Left</div>
+        <div class="stage-label" id="stage-right">Stage Right</div>
+
+        <div class="textured-wall"></div>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
