--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         /* Control Panel Styles */
         .control-panel-button {
             position: fixed;
+            bottom: 20px;  /* Changed from top to bottom */
             right: 20px;
-            top: 20px;
             padding: 10px 20px;
             background: #444;
             color: white;
@@ -143,54 +143,51 @@
 
         .control-panel {
             position: fixed;
-            right: -300px;
-            top: 0;
-            width: 300px;
-            height: 100vh;
+            bottom: -120px;  /* Changed from right to bottom */
+            left: 0;
+            width: 100%;
+            height: 120px;
             background: rgba(0, 0, 0, 0.9);
             padding: 20px;
             box-sizing: border-box;
-            transition: right 0.3s ease;
+            transition: bottom 0.2s ease;
             display: flex;
-            flex-direction: column;
-            gap: 15px;
+            justify-content: center;
+            align-items: center;
             z-index: 999;
         }
 
         .control-panel.open {
-            right: 0;
+            bottom: 0;  /* Changed from right to bottom */
         }
 
         .slider-container {
             display: flex;
+            flex-direction: column;
             align-items: center;
-            gap: 10px;
-            color: white;
+            width: 120px;
+            height: 80px;
+            position: relative;
+            margin: 0 10px;
         }
 
         .slider-container input[type="range"] {
-            writing-mode: bt-lr;
+            position: relative;
             -webkit-appearance: none;
-            width: 150px;
+            width: 100px;
             height: 4px;
             background: #555;
-            transform: rotate(270deg);
-            transform-origin: right;
-            margin-right: -75px;
-        }
-
-        .slider-container input[type="range"]::-webkit-slider-thumb {
-            -webkit-appearance: none;
-            width: 16px;
-            height: 16px;
-            background: white;
-            border-radius: 50%;
-            cursor: pointer;
+            margin: 10px 0;
+            transform: none;  /* Remove rotation */
         }
 
         .slider-label {
-            width: 30px;
-            text-align: right;
+            position: relative;
+            color: white;
+            text-align: center;
+            transform: none;
+            right: 0;
+            top: 0;
         }
     </style>
 </head>
