fix control panel placement

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         /* Control Panel Styles */
         .control-panel-button {
             position: fixed;
-            bottom: 220px;  /* Moved up to match new panel position */
+            bottom: 120px;  /* Lowered back down */
             right: 20px;
             padding: 10px 20px;
             background: #444;
@@ -158,7 +158,7 @@
         }
 
         .control-panel.open {
-            bottom: 200px;  /* Changed to show panel higher up */
+            bottom: 100px;  /* Lowered back down but still slightly elevated from bottom */
         }
 
         .scene-manager {
